--- a/index.html
+++ b/index.html
@@ -1,11 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daisy Man</title>
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <!-- Tailwind & DaisyUI -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              backgroundImage: {
+                'bg-image': 'url("./images/yellow-bg.jpg")',
+              }
+            }
+          }
+        }
+      </script>
 </head>
+
 <body>
-    
+    <!-- Header Section Starts Here -->
+    <header>
+        <!-- NavBar Section Starts Here -->
+        <nav class="bg-blue-200">
+            <div class="navbar container mx-auto">
+                <div class="flex-1">
+                    <a class="btn btn-ghost normal-case rounded-full text-xl">Daisy Man</a>
+                </div>
+                <div class="flex-none">
+                    <div class="dropdown dropdown-end">
+                        <label tabindex="0" class="btn btn-ghost btn-circle">
+                            <div class="indicator">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                                </svg>
+                                <span class="badge badge-sm indicator-item">8</span>
+                            </div>
+                        </label>
+                    </div>
+                    <div class="dropdown dropdown-end ml-3">
+                        <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+                            <div class="w-10 rounded-full">
+                                <img src=".//images/avatar.png" />
+                            </div>
+                        </label>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!-- NavBar Section Ends Here -->
+
+        <!-- Banner Section Starts Here -->
+        <section>
+            <div class="hero min-h-[calc(100vh-66px)]  bg-bg-image">
+                <div class="hero-overlay bg-opacity-60"></div>
+                <div class="hero-content text-center text-neutral-content">
+                  <div class="max-w-md">
+                    <h1 class="mb-5 text-5xl font-bold">Welcome To <br>DaisyMan</h1>
+                    <p class="mb-5">
+                        Your one-stop destination for all your fashion needs. At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.
+                    </p>
+                    <button class="btn btn-white rounded-full upper">shop now</button>
+                  </div>
+                </div>
+              </div>
+        </section>
+        <!-- Banner Section Ends Here -->
+
+        <!-- Huge Collection Section Starts Here -->
+        <section class="my-14">
+            <div class="grid max-w-6xl mx-auto">
+                <div class="card w-96 bg-base-100 shadow-xl image-full">
+                    <figure><img src="./images/shoes.avif" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Shoes!</h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <button class="btn btn-primary">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </section>
+        <!-- Huge Collection Section Ends Here -->
+    </header>
+    <!-- Header Section Ends Here -->
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
