--- a/index.html
+++ b/index.html
@@ -2,102 +2,279 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daisy Man</title>
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <!-- Tailwind & DaisyUI -->
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Daisy Man</title>
+  <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+  <!-- Tailwind & DaisyUI -->
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              backgroundImage: {
-                'bg-image': 'url("./images/yellow-bg.jpg")',
-              }
-            }
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          backgroundImage: {
+            'bg-image': 'url("./images/yellow-bg.jpg")',
           }
         }
-      </script>
+      }
+    }
+  </script>
 </head>
 
 <body>
-    <!-- Header Section Starts Here -->
-    <header>
-        <!-- NavBar Section Starts Here -->
-        <nav class="bg-blue-200">
-            <div class="navbar container mx-auto">
-                <div class="flex-1">
-                    <a class="btn btn-ghost normal-case rounded-full text-xl">Daisy Man</a>
-                </div>
-                <div class="flex-none">
-                    <div class="dropdown dropdown-end">
-                        <label tabindex="0" class="btn btn-ghost btn-circle">
-                            <div class="indicator">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
-                                    stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
-                                </svg>
-                                <span class="badge badge-sm indicator-item">8</span>
-                            </div>
-                        </label>
-                    </div>
-                    <div class="dropdown dropdown-end ml-3">
-                        <label tabindex="0" class="btn btn-ghost btn-circle avatar">
-                            <div class="w-10 rounded-full">
-                                <img src=".//images/avatar.png" />
-                            </div>
-                        </label>
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <!-- NavBar Section Ends Here -->
-
-        <!-- Banner Section Starts Here -->
-        <section>
-            <div class="hero min-h-[calc(100vh-66px)]  bg-bg-image">
-                <div class="hero-overlay bg-opacity-60"></div>
-                <div class="hero-content text-center text-neutral-content">
-                  <div class="max-w-md">
-                    <h1 class="mb-5 text-5xl font-bold">Welcome To <br>DaisyMan</h1>
-                    <p class="mb-5">
-                        Your one-stop destination for all your fashion needs. At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to provide you with a diverse and trendy collection.
-                    </p>
-                    <button class="btn btn-white rounded-full upper">shop now</button>
-                  </div>
-                </div>
+  <!-- Header Section Starts Here -->
+  <header>
+    <!-- NavBar Section Starts Here -->
+    <nav class="bg-blue-200">
+      <div class="navbar container mx-auto">
+        <div class="flex-1">
+          <a class="btn btn-ghost normal-case rounded-full text-xl">Daisy Man</a>
+        </div>
+        <div class="flex-none">
+          <div class="dropdown dropdown-end">
+            <label tabindex="0" class="btn btn-ghost btn-circle">
+              <div class="indicator">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                  stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                </svg>
+                <span class="badge badge-sm indicator-item">8</span>
               </div>
-        </section>
-        <!-- Banner Section Ends Here -->
+            </label>
+          </div>
+          <div class="dropdown dropdown-end ml-3">
+            <label tabindex="0" class="btn btn-ghost btn-circle avatar">
+              <div class="w-10 rounded-full">
+                <img src=".//images/avatar.png" />
+              </div>
+            </label>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <!-- NavBar Section Ends Here -->
 
-        <!-- Huge Collection Section Starts Here -->
-        <section class="my-14">
-            <div class="grid max-w-6xl mx-auto">
-                <div class="card w-96 bg-base-100 shadow-xl image-full">
-                    <figure><img src="./images/shoes.avif" alt="Shoes" /></figure>
-                    <div class="card-body">
-                      <h2 class="card-title">Shoes!</h2>
-                      <p>If a dog chews shoes whose shoes does he choose?</p>
-                      <div class="card-actions justify-end">
-                        <button class="btn btn-primary">Buy Now</button>
-                      </div>
-                    </div>
-                  </div>
+    <!-- Banner Section Starts Here -->
+    <section>
+      <div class="hero min-h-[calc(100vh-66px)]  bg-bg-image">
+        <div class="hero-overlay bg-opacity-60"></div>
+        <div class="hero-content text-center text-neutral-content">
+          <div class="max-w-md">
+            <h1 class="mb-5 text-5xl font-bold">Welcome To <br>DaisyMan</h1>
+            <p class="mb-5">
+              Your one-stop destination for all your fashion needs. At DaisyMan, we believe that style is a reflection
+              of your unique personality and our mission is to provide you with a diverse and trendy collection.
+            </p>
+            <button class="btn btn-white rounded-full upper">shop now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Banner Section Ends Here -->
+  </header>
+  <!-- Header Section Ends Here -->
+
+  <!-- Main Section Starts Here -->
+  <main>
+    <!-- Huge Collection Section Starts Here -->
+    <section class="lg:my-14 md:mx-10 mx-5">
+      <div class="text-center mb-12 space-y-3">
+        <h3 class="text-4xl font-semibold">Huge Collection</h3>
+        <p>Browse from a various collections</p>
+      </div>
+      <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1  gap-8 max-w-6xl mx-auto">
+        <!-- First Card  -->
+        <div class="card bg-base-100 shadow-xl image-full">
+          <figure><img src="./images/shoes.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Shoes!</h2>
+            <p>
+              At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to
+              provide you with a diverse and trendy collection
+            </p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-white rounded-full">Buy Now</button>
             </div>
-        </section>
-        <!-- Huge Collection Section Ends Here -->
-    </header>
-    <!-- Header Section Ends Here -->
-    <main>
+          </div>
+        </div>
+        <!-- Second Card -->
+        <div class="card bg-base-100 shadow-xl image-full">
+          <figure><img src="./images/shoes.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Clothes!</h2>
+            <p>
+              At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to
+              provide you with a diverse and trendy collection
+            </p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-white rounded-full">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <!-- third Card -->
+        <div class="card bg-base-100 shadow-xl image-full">
+          <figure><img src="./images/shoes.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Perfumes!</h2>
+            <p>
+              At DaisyMan, we believe that style is a reflection of your unique personality and our mission is to
+              provide you with a diverse and trendy collection
+            </p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-white rounded-full">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Huge Collection Section Ends Here -->
 
-    </main>
-    <footer>
+    <!-- Purchase Section Starts Here -->
+    <!-- <section>
+      <div class="max-w-6xl mx-auto">
+        <div class=" hero min-h-screen ">
+          <div class="flex items-center justify-between">            
+            <div class="w-2/4 text-left">
+              <h1 class="text-5xl font-bold">Easy Purchase</h1>
+              <p class="py-6">
+                we believe that style is a reflection of your unique personality and our mission is to provide you with
+                a diverse and trendy collection.
+                Our mission is to provide you with a diverse and trendy collection.
+              </p>
+            </div>
+            <div class="max-h-80">
+              <img src="./images//easy-purchase.avif" class="max-w-md	max-h-80 shadow-2xl" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section> -->
+    <!-- Purchase Section Ends Here -->
 
-    </footer>
+
+    <!-- Main Seciton Ends Here -->
+    <section class="my-16 px-6 md:px-6">
+      <div class="text-center mb-12 space-y-3">
+        <h3 class="text-4xl font-semibold">Top Products</h3>
+        <p>Browse from a various collections</p>
+      </div>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-7 max-w-6xl mx-auto">
+        <!-- First Card -->
+        <div class="card card-compact bg-base-100 shadow-xl">
+          <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Formal Shirt</h2>
+            <p>Our mission is to provide you with a diverse and trendy collection.</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-ghost rounded-full">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <!-- Second Card -->
+        <div class="card card-compact bg-base-100 shadow-xl">
+          <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Formal Shirt</h2>
+            <p>Our mission is to provide you with a diverse and trendy collection.</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-ghost rounded-full">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <!-- third card -->
+        <div class="card card-compact bg-base-100 shadow-xl">
+          <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Formal Shirt</h2>
+            <p>Our mission is to provide you with a diverse and trendy collection.</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-ghost rounded-full">Buy Now</button>
+            </div>
+          </div>
+        </div>
+        <!-- Four Card -->
+        <div class="card card-compact bg-base-100 shadow-xl">
+          <figure><img src="./images/elegant-businessman-attire-hangs-modern-closet-generated-by-ai_188544-15312.avif" alt="Shoes" /></figure>
+          <div class="card-body">
+            <h2 class="card-title">Formal Shirt</h2>
+            <p>Our mission is to provide you with a diverse and trendy collection.</p>
+            <div class="card-actions justify-end">
+              <button class="btn btn-ghost rounded-full">Buy Now</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Product Section Ends  Here -->
+
+    <!-- Faq sectin start here -->
+    <section class="my-16 px-6 ">
+      <div class="text-center mb-12 space-y-3">
+        <h3 class="text-4xl font-semibold">Frequently Asked Questions</h3>
+        <p>Browse from a various collections</p>
+      </div>
+
+      <div class="max-w-6xl mx-auto space-y-4">
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" checked="checked" /> 
+          <div class="collapse-title text-xl font-medium">
+            <p>How Can I purchase?</p>
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            Click to open this one and close others
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus bg-base-200">
+          <input type="radio" name="my-accordion-3" /> 
+          <div class="collapse-title text-xl font-medium">
+            Click to open this one and close others
+          </div>
+          <div class="collapse-content"> 
+            <p>hello</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Faq sectin Ends here -->
+
+  </main>
+
+  <footer class="bg-neutral">
+    <section class="footer py-10 text-neutral-content max-w-6xl mx-auto flex-cols lg:flex justify-center lg:justify-between">
+      <div>
+        <span class="footer-title">Services</span> 
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </div> 
+      <div>
+        <span class="footer-title">Company</span> 
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </div> 
+      <div>
+        <span class="footer-title">Legal</span> 
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </div>
+</section>
+  </footer>
 </body>
 
 </html>
